--- a/q/57193.html
+++ b/q/57193.html
@@ -26,9 +26,9 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>010</td><td>J</td><td>240918T185413Z</td><td><a href="https://codegolf.stackexchange.com/questions/57193/horizontal-graph-of-word-length/275618#275618">Conor O&</a></td></tr>
-<tr d-ix="1"><td>nan</td><td></td><td>240918T063314Z</td><td><a href="https://codegolf.stackexchange.com/questions/57193/horizontal-graph-of-word-length/275603#275603">Aaron</a></td></tr>
-<tr d-ix="2"><td>030</td><td>AWK</td><td>240918T092812Z</td><td><a href="https://codegolf.stackexchange.com/questions/57193/horizontal-graph-of-word-length/275606#275606">cnamejj</a></td></tr>
+<tr d-ix="0"><td>031</td><td>AWK</td><td>240918T092812Z</td><td><a href="https://codegolf.stackexchange.com/questions/57193/horizontal-graph-of-word-length/275606#275606">cnamejj</a></td></tr>
+<tr d-ix="1"><td>010</td><td>J</td><td>240918T185413Z</td><td><a href="https://codegolf.stackexchange.com/questions/57193/horizontal-graph-of-word-length/275618#275618">Conor O&</a></td></tr>
+<tr d-ix="2"><td>nan</td><td></td><td>240918T063314Z</td><td><a href="https://codegolf.stackexchange.com/questions/57193/horizontal-graph-of-word-length/275603#275603">Aaron</a></td></tr>
 <tr d-ix="3"><td>066</td><td>Red</td><td>240918T075750Z</td><td><a href="https://codegolf.stackexchange.com/questions/57193/horizontal-graph-of-word-length/275604#275604">Galen Iv</a></td></tr>
 <tr d-ix="4"><td>005</td><td>Vyxal</td><td>210618T052227Z</td><td><a href="https://codegolf.stackexchange.com/questions/57193/horizontal-graph-of-word-length/229935#229935">emanresu</a></td></tr>
 <tr d-ix="5"><td>005</td><td>Vyxal 3 j</td><td>240913T121249Z</td><td><a href="https://codegolf.stackexchange.com/questions/57193/horizontal-graph-of-word-length/275508#275508">pacman25</a></td></tr>
@@ -69,14 +69,25 @@
 <tr d-ix="40"><td>009</td><td>Pyth</td><td>150907T130911Z</td><td><a href="https://codegolf.stackexchange.com/questions/57193/horizontal-graph-of-word-length/57198#57198">isaacg</a></td></tr>
 <tr d-ix="41"><td>010</td><td>CJam</td><td>150907T124225Z</td><td><a href="https://codegolf.stackexchange.com/questions/57193/horizontal-graph-of-word-length/57194#57194">Optimize</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="http://jsoftware.com/" rel="nofollow noreferrer">J</a>, 10 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://www.gnu.org/software/gawk/manual/gawk.html" rel="nofollow noreferrer">AWK</a>, <s>30</s> 31 bytes</h1>
+<pre><code>gsub(/[^ ]/,&quot;*&quot;)gsub(/ +/,&quot;\n&quot;)
+</code></pre>
+<p><a href="https://tio.run/##SyzP/v8/vbg0SUM/Ok4hVl9HSUtJE8JX0AbyYvKUNP//D8nILFYAosQ8hdSKxNyCnFQFoEhJfnpRYq6CQn6aQnl@UYpCTmpeekkGAA" rel="nofollow noreferrer" title="AWK – Try It Online">Try it online!</a></p>
+<p>Thanks to Marius_Couet for the bug fix!</p>
+<p>Another regex program...</p>
+<pre><code>gsub(&quot;[^ ]&quot;,&quot;*&quot;)                - change all &quot;not space&quot; chars to &quot;*&quot;
+                gsub(/ +/,&quot;\n&quot;) - change all spaces to LF's
+</code></pre>
+<p>the input is STDIN by default, and the result is printed to STDOUT by default as well.</p>
+</div>
+<div id="pu1" class="pu"><h1><a href="http://jsoftware.com/" rel="nofollow noreferrer">J</a>, 10 bytes</h1>
 <pre><code>'*'&quot;0&amp;&gt;@;:
 </code></pre>
 <p><a href="https://tio.run/##NUxLDoIwFNxzigkLnphKWNdoSExcuTJe4AkFJEAJrdETeACP6EVqEUlmZjG/xoUJldhJkEAK6blJcDifjo7WFKbRPttKFwdWGTu1VF7rbCUiwuf1BkGgjIM5pUt9M/DgHurJ3dAqeMfqauQOusRDjwVa1Ve2pv@EwRN@nIWXqND3q38wA@cKyyG5Lw" rel="nofollow noreferrer" title="J – Try It Online">Try it online!</a></p>
 <p>For context, the <a href="https://codegolf.stackexchange.com/a/57436/31957">other J answer</a> is not a conventional function, but rather a REPL expression expecting its input immediately after. The more conventional representation nowadays, as a verb, would be <code>'*'$~$&amp;&gt;@;:</code> for 11 bytes.</p>
 <p>This is a pure J verb which functions similarly to the other J answer, but instead of manually repeating <code>*</code> by the shape of each word, this answer applies the constant <code>'*'</code> to each cell of each word (aka each character) via rank-0 application <code>&quot;0</code>, saving a byte.</p>
 </div>
-<div id="pu1" class="pu"><hr />
+<div id="pu2" class="pu"><hr />
 <h2>APL, 13 bytes</h2>
 <pre><code>↑'*'/⍨¨⊆⍨' '≠
 </code></pre>
@@ -90,16 +101,6 @@
       ¨        ⍝     on each array
 ↑              ⍝ Mix into a matrix
 </code></pre>
-</div>
-<div id="pu2" class="pu"><h1><a href="https://www.gnu.org/software/gawk/manual/gawk.html" rel="nofollow noreferrer">AWK</a>, 30 bytes</h1>
-<pre><code>gsub(&quot;[^ ]&quot;,&quot;*&quot;)gsub(&quot; &quot;,&quot;\n&quot;)
-</code></pre>
-<p><a href="https://tio.run/##SyzP/v8/vbg0SUMpOk4hVklHSUtJE8JXAHJi8pQ0//8PycgsVgCixDyF1IrE3IKcVAWgSEl@elFirkJ@mkJ5flGKQk5qXnpJBgA" rel="nofollow noreferrer" title="AWK – Try It Online">Try it online!</a></p>
-<p>Another regex program...</p>
-<pre><code>gsub(&quot;[^ ]&quot;,&quot;*&quot;)                - change all &quot;not space&quot; chars to &quot;*&quot;
-                gsub(&quot; &quot;,&quot;\n&quot;)  - change all spaces to LF's
-</code></pre>
-<p>the input is STDIN by default, and the result is printed to STDOUT by default as well.</p>
 </div>
 <div id="pu3" class="pu"><h1><a href="http://www.red-lang.org" rel="nofollow noreferrer">Red</a>, 66 bytes</h1>
 <pre><code>func[s][r:[not sp skip]parse s[any[change r&quot;*&quot;| change to r lf]]s]
