--- a/q/57193.html
+++ b/q/57193.html
@@ -73,7 +73,7 @@
 </table>
 <div id="pu0" class="pu"><h1><a href="https://gcc.gnu.org/" rel="nofollow noreferrer">C (gcc)</a>, 49 bytes</h1>
 
-<pre class="lang-c prettyprint-override"><code>f(x){(x=getchar())&gt;10?putchar(x^32?42:10),f():0;}
+<pre class="lang-c prettyprint-override"><code>f(x){(x=getchar())&gt;10?putchar(x^32?42:10),f():f;}
 </code></pre>
 <p><a href="https://tio.run/##JYjLCoMwEADvfsUed8FCtJ6U6k/0XFjSPASTSJrSgPjtacBhLjPyZqQsRWOmA/PDqCQtRySaO7Hs36vy694vQz92glqNNIrpLI5XjwRHA5U6p@YsT7t@oMoeVGa3bwrqScFEdhA0/EJ8w6a8SfYP" rel="nofollow noreferrer" title="C (gcc) – Try It Online">Try it online!</a></p>
 </div>
