--- a/q/275700.html
+++ b/q/275700.html
@@ -26,14 +26,23 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>010</td><td>Uiua</td><td>240923T214005Z</td><td><a href="https://codegolf.stackexchange.com/questions/275700/reorder-a-string-of-length-2n-by-permuting-the-n-binary-digits-of-every/275728#275728">nyxbird</a></td></tr>
-<tr d-ix="1"><td>110</td><td>Python</td><td>240923T042739Z</td><td><a href="https://codegolf.stackexchange.com/questions/275700/reorder-a-string-of-length-2n-by-permuting-the-n-binary-digits-of-every/275703#275703">Unrelate</a></td></tr>
-<tr d-ix="2"><td>113</td><td>Python3</td><td>240923T015712Z</td><td><a href="https://codegolf.stackexchange.com/questions/275700/reorder-a-string-of-length-2n-by-permuting-the-n-binary-digits-of-every/275702#275702">Ajax1234</a></td></tr>
-<tr d-ix="3"><td>016</td><td>Charcoal</td><td>240923T045516Z</td><td><a href="https://codegolf.stackexchange.com/questions/275700/reorder-a-string-of-length-2n-by-permuting-the-n-binary-digits-of-every/275704#275704">Neil</a></td></tr>
-<tr d-ix="4"><td>050</td><td>Python + NumPy</td><td>240923T070826Z</td><td><a href="https://codegolf.stackexchange.com/questions/275700/reorder-a-string-of-length-2n-by-permuting-the-n-binary-digits-of-every/275706#275706">Albert.L</a></td></tr>
+<tr d-ix="0"><td>045</td><td>Python + NumPy</td><td>240923T070826Z</td><td><a href="https://codegolf.stackexchange.com/questions/275700/reorder-a-string-of-length-2n-by-permuting-the-n-binary-digits-of-every/275706#275706">Albert.L</a></td></tr>
+<tr d-ix="1"><td>010</td><td>Uiua</td><td>240923T214005Z</td><td><a href="https://codegolf.stackexchange.com/questions/275700/reorder-a-string-of-length-2n-by-permuting-the-n-binary-digits-of-every/275728#275728">nyxbird</a></td></tr>
+<tr d-ix="2"><td>110</td><td>Python</td><td>240923T042739Z</td><td><a href="https://codegolf.stackexchange.com/questions/275700/reorder-a-string-of-length-2n-by-permuting-the-n-binary-digits-of-every/275703#275703">Unrelate</a></td></tr>
+<tr d-ix="3"><td>113</td><td>Python3</td><td>240923T015712Z</td><td><a href="https://codegolf.stackexchange.com/questions/275700/reorder-a-string-of-length-2n-by-permuting-the-n-binary-digits-of-every/275702#275702">Ajax1234</a></td></tr>
+<tr d-ix="4"><td>016</td><td>Charcoal</td><td>240923T045516Z</td><td><a href="https://codegolf.stackexchange.com/questions/275700/reorder-a-string-of-length-2n-by-permuting-the-n-binary-digits-of-every/275704#275704">Neil</a></td></tr>
 <tr d-ix="5"><td>008</td><td>Jelly</td><td>240923T011922Z</td><td><a href="https://codegolf.stackexchange.com/questions/275700/reorder-a-string-of-length-2n-by-permuting-the-n-binary-digits-of-every/275701#275701">Unrelate</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://uiua.org" rel="nofollow noreferrer">Uiua</a>, 10 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://www.python.org" rel="nofollow noreferrer">Python</a> + NumPy, 45 bytes</h1>
+<h3>-5 thanks @att</h3>
+<pre class="lang-python prettyprint-override"><code>lambda a,p:a.reshape(p*0+2).transpose(p).flat
+</code></pre>
+<p><a href="https://ato.pxeger.com/run?1=m72soLIkIz9vweI025ilpSVpuhY3dXMSc5NSEhUSdQqsEvWKUoszEgtSNQq0DLSNNPVKihLzigvyi4ECmnppOYklUE3eaUX5uQp5pbkFlQqZuQX5RSUKRfFcXIkKtkA62lDHUMcAjg1iuQog4kYgkVguroKizLwSDa00DaCdmpoQIxcsgNAA" rel="nofollow noreferrer">Attempt This Online!</a></p>
+<p>Expects the binary string and the permutation as NumPy arrays and returns a NumPy flatiter object.</p>
+<h3>How?</h3>
+<p>Quite literal approach: Arranges the input sequence into a 2x2x...x2 hypercube, shuffles dimensions according to permutation, and flattens the result.</p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://uiua.org" rel="nofollow noreferrer">Uiua</a>, 10 bytes</h1>
 <pre><code>⊏⍜⊙⋯≡⊏¤⊙°⊏
 </code></pre>
 <p><a href="https://www.uiua.org/pad?src=0_13_0-dev_2__WzIgMCAxXVsxIDEgMCAxIDAgMCAxIDBdCuKKj-KNnOKKmeKLr-KJoeKKj8Kk4oqZwrDiio8K" rel="nofollow noreferrer">Try it!</a></p>
@@ -46,7 +55,7 @@
 ⊏             # index into s
 </code></pre>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://www.python.org" rel="nofollow noreferrer">Python</a>, <s>113</s> 110 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://www.python.org" rel="nofollow noreferrer">Python</a>, <s>113</s> 110 bytes</h1>
 <pre class="lang-python prettyprint-override"><code>lambda s,p,n:[s[i]for i in g(range(n),*p[::-1])]
 g=lambda s,h,*t:sorted(t and g(s,*t)or s,key=lambda i:i&gt;&gt;h&amp;1)
 </code></pre>
@@ -59,12 +68,12 @@ g=lambda s,h,*t:sorted(t and g(s,*t)or s,key=lambda i:i&gt;&gt;h&amp;1)
 from functools import*
 </code></pre>
 </div>
-<div id="pu2" class="pu"><h1>Python3, 113 bytes</h1>
+<div id="pu3" class="pu"><h1>Python3, 113 bytes</h1>
 <pre><code>lambda n,s,o:''.join(s[int(''.join(x for _,x in sorted([*zip(o,bin(j)[2:].zfill(n))])),2)]for j in range(len(s)))
 </code></pre>
 <p><a href="https://tio.run/##NYxBCoMwEEWvkl1myiAmborQk0QpikkbSSchurBePo2Lwt88Pu@l7/6O3N1TLu4xlDB95mUSTBvFXspmjZ5hM553@NMhXMziSYfwLLaYd7uAuZ0@QaS5/isa3Y/N6XwIwIgjImkcL2m9lDzxy0KwtYuIJeUr7qAjqVSr2jpJRlNLqprlBw" rel="nofollow noreferrer">Try it online!</a></p>
 </div>
-<div id="pu3" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 16 bytes</h1>
+<div id="pu4" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 16 bytes</h1>
 <pre><code>⭆θ§θΣＥη∧＆κＸ²μＸ²λ
 </code></pre>
 <p><a href="https://tio.run/##S85ILErOT8z5/z@gKDOvRCO4BEil@yYWaBTqKDiWeOalpFaAmMGluRog0QygaF6KhlNmSXlmcSqIma2jEJBfnlqkYaSjkKupicTL0YQA6///DQ0NDA2AiMvQyOC/blkOAA" rel="nofollow noreferrer" title="Charcoal – Try It Online">Try it online!</a> Link is to verbose version of code. Takes <code>s</code> as the first input as a list or bitstring and <code>σ</code> as the second input as a list (or string if <code>n&lt;11</code>) of 0-indexed destination indices and outputs a bitstring. Explanation:</p>
@@ -87,14 +96,6 @@ from functools import*
                     Implicitly print
 </code></pre>
 <p>(If you run this code on ATO instead of TIO then you can also pass <code>σ</code> as a dictionary mapping 0-indexed source indices to destination indices.)</p>
-</div>
-<div id="pu4" class="pu"><h1><a href="https://www.python.org" rel="nofollow noreferrer">Python</a> + NumPy, 50 bytes</h1>
-<pre class="lang-python prettyprint-override"><code>lambda a,p:a.reshape(len(p)*[2]).transpose(p).flat
-</code></pre>
-<p><a href="https://ato.pxeger.com/run?1=m72soLIkIz9vweI025ilpSVpuhY3jXISc5NSEhUSdQqsEvWKUoszEgtSNXJS8zQKNLWijWI19UqKEvOKC_KLU4Eiemk5iSVQnd5pRfm5CnmluQWVCpm5BflFJQpF8VxciQq2QDraUMdQxwCODWK5CiDiRiCRWC6ugqLMvBINrTQNoMWamhAjFyyA0AA" rel="nofollow noreferrer">Attempt This Online!</a></p>
-<p>Expects the binary string and the permutation as NumPy arrays and returns a NumPy flatiter object.</p>
-<h3>How?</h3>
-<p>Quite literal approach: Arranges the input sequence into a 2x2x...x2 hypercube, shuffles dimensions according to permutation, and flattens the result.</p>
 </div>
 <div id="pu5" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, <s>9</s> 8 bytes</h1>
 <pre><code>ịⱮL2ṗɗỤị
