--- a/q/275697.html
+++ b/q/275697.html
@@ -40,6 +40,17 @@
 <pre><code>{⍺ ⌿⍨ 1 + ((+\ × ⊢) ' '=⍺)∊⍸⍵⊤⍨8⍴2}
 </code></pre>
 <p><a href="https://razetime.github.io/APLgolf/?h=e9Q3NTP/UdsEA64QIFn9qHcXkHrUtfhRd8ujrmYQX0ddQV3nUe/WWn0gRwHIACIQpf6obZK6BkRsFxht1axVUAAA&amp;c=q37Uu0vhUc/@R70rFAwVtBU0NLRjFA5PV3jUtUhTQV1B3RYor/moo@tR745HvVsfdS0BKrR41LvFqBYA&amp;f=pY8/a8JQFMX3fIrjdBOCmqRCJnHtrmOXYN9Dof7BBCsE1yCPPmhdupcKbi4KxaVQv8n9JN7XRVdxuMM9nHPP7xbg6h0aPZAm7/l/KxM2m79dHIZNrj5SGTYV2y2B2mwPS2dm88XVmjyPHtVMYZhjMlZQi2w0fVF4HRYDpMinWV/lDXTVXI1rhAJJIh23RLSLUMn2CH77FQjECOH74RNOnxCKACRcDuwY8Mqw/RFENt9iTdnuk6Wr9TtxFAX12JXfd0tfbvmtSETKQIFUPLjPriUt0hk&amp;i=AwA&amp;r=tryapl&amp;l=apl-dyalog&amp;m=dfn&amp;n=f" rel="nofollow noreferrer">Try it on APLgolf!</a></p>
+<pre><code>{⍺ ⌿⍨ 1 + ((+\ × ⊢) ' '=⍺)∊⍸⍵⊤⍨8⍴2}
+ ⍺ ⌿⍨                               ⍝ input string replicated with
+      1 +                           ⍝ one more of
+          ((+\ × ⊢) ' '=⍺)∊⍸⍵⊤⍨8⍴2  ⍝ mask for spaces that need to be doubled
+           (+\ × ⊢) ' '=⍺           ⍝ i if it's the i-th space (1-indexed), 0 for non-spaces
+                                    ⍝   'x xxx xxxx x' → 0 1 0 0 0 2 0 0 0 0 3 0
+                          ∊         ⍝ is in
+                           ⍸⍵⊤⍨8⍴2  ⍝ which bits are 1 in 8-bit representation of ⍵
+                                    ⍝   We take 8-bit representation so this is 1-indexed
+
+</code></pre>
 </div>
 <div id="pu1" class="pu"><h1><a href="https://www.haskell.org/" rel="nofollow noreferrer">Haskell</a>, 73 bytes</h1>
 
