--- a/q/275697.html
+++ b/q/275697.html
@@ -48,9 +48,10 @@
                                     ⍝   'x xxx xxxx x' → 0 1 0 0 0 2 0 0 0 0 3 0
                           ∊         ⍝ is in
                            ⍸⍵⊤⍨8⍴2  ⍝ which bits are 1 in 8-bit representation of ⍵
-                                    ⍝   We take 8-bit representation so this is 1-indexed
+                                    ⍝   We take 8-bit representation so the highest possible set bit becomes 1.
 
 </code></pre>
+<p>The corresponding decoding function is <code>{2⊥¯1++/↑7↑⊆⍨' '=⍵}</code>.</p>
 </div>
 <div id="pu1" class="pu"><h1><a href="https://www.haskell.org/" rel="nofollow noreferrer">Haskell</a>, 73 bytes</h1>
 
