--- a/q/275640.html
+++ b/q/275640.html
@@ -26,9 +26,17 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>380</td><td>Python 3 + numpy + scipy</td><td>240920T053305Z</td><td><a href="https://codegolf.stackexchange.com/questions/275640/count-the-symmetries/275657#275657">gsitcia</a></td></tr>
+<tr d-ix="0"><td>124</td><td>PARI/GP</td><td>240924T050655Z</td><td><a href="https://codegolf.stackexchange.com/questions/275640/count-the-symmetries/275735#275735">alephalp</a></td></tr>
+<tr d-ix="1"><td>380</td><td>Python 3 + numpy + scipy</td><td>240920T053305Z</td><td><a href="https://codegolf.stackexchange.com/questions/275640/count-the-symmetries/275657#275657">gsitcia</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://docs.python.org/3/" rel="nofollow noreferrer">Python 3 + numpy + scipy</a>, 380 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://pari.math.u-bordeaux.fr" rel="nofollow noreferrer">PARI/GP</a>, 124 bytes</h1>
+<pre><code>a-&gt;if(1&lt;r=#a+1-matrank(concat(a,1^a[,1])),oo,n=#a~;n!/#Set([[[(v=a[s,]-a[t,])*v~|t&lt;-p]|s&lt;-p=numtoperm(n,k)]|k&lt;-[1..n!]])&lt;&lt;r)
+</code></pre>
+<p><a href="https://ato.pxeger.com/run?1=XVBLasMwFKQ3cZKN1EqpJRMo2M62q666FGp5hLgY17JwlEDB5CLdGErpmdrT9EmWCWTh95l5zIz8-WOhr1_f7PhVJeX30VX84XcAvq0rIoq-XMGd4C24HkxDdp3ZgSPAxAsoJjSlrOuYwaNzbhb3q-e9I0opcipBHZjmoBzT9PZ0HlzBrR4OWEtzbF1n931LDGuoHpqCK7Fem4XWtCh6OmX4u3kEa98_CCR8m9i-NuibLP2yTCoCaJ0olbI0F-ETGne_ysvomZSJmcWWc8G4B3gYry4lrk_4Pg9pGqhNICXL4uXkhUISQZlnLLtQGy-DFS3DjHWyTaccoaaTqYygjKD0uSMigo6MkYNb0JhVZp3YoyIGy-U8ZPElgur4P8dx6v8" rel="nofollow noreferrer">Attempt This Online!</a></p>
+<p>Takes input as a matrix where each row is the coordinates of a point.</p>
+<p>Let <span class="math-container">\$d\$</span> be the dimension of the space, and <span class="math-container">\$d'\$</span> be the dimension of the affine the affine subspace spanned by the points. If <span class="math-container">\$d'&lt;d-1\$</span>, there are infinitely many symmetries. If <span class="math-container">\$d'=d\$</span>, we can simply count the permutations of the points that preserve distances. If <span class="math-container">\$d'=d-1\$</span>, we can count the number of such permutations, and then multiply it by <span class="math-container">\$2\$</span> to account for reflections.</p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://docs.python.org/3/" rel="nofollow noreferrer">Python 3 + numpy + scipy</a>, 380 bytes</h1>
 
 <pre class="lang-python prettyprint-override"><code>from itertools import*
 from numpy import*
