--- a/q/275590.html
+++ b/q/275590.html
@@ -26,7 +26,7 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>2362</td><td>Zsh +ffplay</td><td>240923T094444Z</td><td><a href="https://codegolf.stackexchange.com/questions/275590/play-the-final-fantasy-prelude/275717#275717">roblogic</a></td></tr>
+<tr d-ix="0"><td>2332</td><td>Zsh +ffplay</td><td>240923T094444Z</td><td><a href="https://codegolf.stackexchange.com/questions/275590/play-the-final-fantasy-prelude/275717#275717">roblogic</a></td></tr>
 <tr d-ix="1"><td>324</td><td>JavaScript</td><td>240920T204734Z</td><td><a href="https://codegolf.stackexchange.com/questions/275590/play-the-final-fantasy-prelude/275664#275664">rougepie</a></td></tr>
 <tr d-ix="2"><td>174</td><td>C GCC using OSS</td><td>240921T162403Z</td><td><a href="https://codegolf.stackexchange.com/questions/275590/play-the-final-fantasy-prelude/275674#275674">G. Sliep</a></td></tr>
 <tr d-ix="3"><td>320</td><td>JavaScript</td><td>240919T161621Z</td><td><a href="https://codegolf.stackexchange.com/questions/275590/play-the-final-fantasy-prelude/275646#275646">Jordan</a></td></tr>
@@ -37,13 +37,13 @@
 <tr d-ix="8"><td>290</td><td>PowerShell</td><td>240918T153022Z</td><td><a href="https://codegolf.stackexchange.com/questions/275590/play-the-final-fantasy-prelude/275613#275613">bigyihsu</a></td></tr>
 <tr d-ix="9"><td>203</td><td>ZX Spectrum 48K Basic</td><td>240918T121524Z</td><td><a href="https://codegolf.stackexchange.com/questions/275590/play-the-final-fantasy-prelude/275609#275609">Neil</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.zsh.org/" rel="nofollow noreferrer">Zsh</a> +<a href="https://www.ffmpeg.org/ffplay.html" rel="nofollow noreferrer"><code>ffplay</code></a>, <sub><s>296</s></sub> <sub><s>241</s></sub> <sub><s>261</s></sub> 236 bytes x 2</h1>
+<div id="pu0" class="pu"><h1><a href="https://www.zsh.org/" rel="nofollow noreferrer">Zsh</a> +<a href="https://www.ffmpeg.org/ffplay.html" rel="nofollow noreferrer"><code>ffplay</code></a>, <sub><s>296</s></sub> <sub><s>241</s></sub> <sub><s>261</s></sub> 233 bytes x 2</h1>
 <pre class="lang-bash prettyprint-override"><code>for z (GIKN DFGK GIKN DFGK @BDG BDFI CGJN EILP){W=
-for i ({0..4})for o (${(s::)z})W+=($[550*2**((##$o-92+12*i)/12.)])
+for i ({0..4})for o (${(s::)z})W+=($[550*2**((##$o-92)/12.+i)])
 for q (${W:0:-4} ${(Oa)W:0:16})S+=between(t,$[p++]/5,$p/5)*$q+
 };ffplay -f lavfi aevalsrc=&quot;'0.1*sin(2*PI*t*(${S%+}))'&quot;
 </code></pre>
-<p><a href="https://tio.run/##RY9Na8JAFEX3/oqHTnHejPnEFJoyUGxqSC1WcJGFuJjKDAaCiU6wNGF@ezTtort7FudebmuOvSwLaUDrupQ/Qh2OVa@rC7RA02y1hmSZruA/vSySFBbJMoPX9H0Nb9nHBrtcjAalANr5rju3OFAFlHTUxDG2FnMuKNlFkc9CxiidTEjlPIU8CFmBXhC6uMffivMg5bEfO3MLd/1T4kDBo8UtF1@q@VbqRJsZ2dWc771oRmovQkbOfGSf/y6Ao6GUV12AVFdZmstBjKe@GzBTnGjINhlr2H1k@8At4nTc9zc" rel="nofollow noreferrer">Try it Online!</a> <sub>Adjusted by ear; frequencies from <code>ffplay</code> seemed a bit off. Uses base of <code>550</code> instead of <code>440</code>.</sub></p>
+<p><a href="https://tio.run/##Rc7NasJAFAXgvU9x0SnOnTG/mEJTBopNDanFCi6yEBdTmeBAMNEJlibMs0fTLro7Z/FxTmuOvSy1NFAUdSl/hDocq76oLtACTbPVGpJluoL/9LJIUlgkywxe0/c1vGUfG@xyMRqIBtr5rju3OLQKKOmoiWNsLeZcULKLIp@FjFE6mZDKeQrRC0KXa9zjrz8PIo/92JlbuNtPiUMLHi1uufhSzbdSJ9rMyK7mfO9FM1J7ETJy5iP7/PcfnAJKeS00SHWVpbkcxHjquwEz@kRDtslYw@4j2wduEafjvr8B" rel="nofollow noreferrer">Try it Online!</a> <sub>Adjusted by ear; frequencies from <code>ffplay</code> seemed a bit off. Uses base of <code>550</code> instead of <code>440</code>.</sub></p>
 <p><code>for z</code> grabs 4 <s>pseudo-hex</s> ASCII characters<br>
 <code>for i</code> and <code>for o</code> populate array <code>W</code> with 20 notes based on <code>z</code>; expressed as<br>
   note number: <code>n=$[##$o-71+12*i]</code>, combined with<br>
