--- a/q/275590.html
+++ b/q/275590.html
@@ -26,18 +26,53 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>2302</td><td>Zsh +ffplay</td><td>240923T094444Z</td><td><a href="https://codegolf.stackexchange.com/questions/275590/play-the-final-fantasy-prelude/275717#275717">roblogic</a></td></tr>
-<tr d-ix="1"><td>324</td><td>JavaScript</td><td>240920T204734Z</td><td><a href="https://codegolf.stackexchange.com/questions/275590/play-the-final-fantasy-prelude/275664#275664">rougepie</a></td></tr>
-<tr d-ix="2"><td>174</td><td>C GCC using OSS</td><td>240921T162403Z</td><td><a href="https://codegolf.stackexchange.com/questions/275590/play-the-final-fantasy-prelude/275674#275674">G. Sliep</a></td></tr>
-<tr d-ix="3"><td>320</td><td>JavaScript</td><td>240919T161621Z</td><td><a href="https://codegolf.stackexchange.com/questions/275590/play-the-final-fantasy-prelude/275646#275646">Jordan</a></td></tr>
-<tr d-ix="4"><td>nan</td><td>CP1610 machine code</td><td>240919T013051Z</td><td><a href="https://codegolf.stackexchange.com/questions/275590/play-the-final-fantasy-prelude/275627#275627">Arnauld</a></td></tr>
-<tr d-ix="5"><td>270</td><td>Javascript</td><td>240920T193816Z</td><td><a href="https://codegolf.stackexchange.com/questions/275590/play-the-final-fantasy-prelude/275663#275663">ccprog</a></td></tr>
-<tr d-ix="6"><td>280</td><td>Chipmunk Basic</td><td>240918T153621Z</td><td><a href="https://codegolf.stackexchange.com/questions/275590/play-the-final-fantasy-prelude/275614#275614">roblogic</a></td></tr>
+<tr d-ix="0"><td>241</td><td>Chipmunk Basic</td><td>240918T153621Z</td><td><a href="https://codegolf.stackexchange.com/questions/275590/play-the-final-fantasy-prelude/275614#275614">roblogic</a></td></tr>
+<tr d-ix="1"><td>2302</td><td>Zsh +ffplay</td><td>240923T094444Z</td><td><a href="https://codegolf.stackexchange.com/questions/275590/play-the-final-fantasy-prelude/275717#275717">roblogic</a></td></tr>
+<tr d-ix="2"><td>324</td><td>JavaScript</td><td>240920T204734Z</td><td><a href="https://codegolf.stackexchange.com/questions/275590/play-the-final-fantasy-prelude/275664#275664">rougepie</a></td></tr>
+<tr d-ix="3"><td>174</td><td>C GCC using OSS</td><td>240921T162403Z</td><td><a href="https://codegolf.stackexchange.com/questions/275590/play-the-final-fantasy-prelude/275674#275674">G. Sliep</a></td></tr>
+<tr d-ix="4"><td>320</td><td>JavaScript</td><td>240919T161621Z</td><td><a href="https://codegolf.stackexchange.com/questions/275590/play-the-final-fantasy-prelude/275646#275646">Jordan</a></td></tr>
+<tr d-ix="5"><td>nan</td><td>CP1610 machine code</td><td>240919T013051Z</td><td><a href="https://codegolf.stackexchange.com/questions/275590/play-the-final-fantasy-prelude/275627#275627">Arnauld</a></td></tr>
+<tr d-ix="6"><td>270</td><td>Javascript</td><td>240920T193816Z</td><td><a href="https://codegolf.stackexchange.com/questions/275590/play-the-final-fantasy-prelude/275663#275663">ccprog</a></td></tr>
 <tr d-ix="7"><td>077</td><td>MATL 1 language</td><td>240917T230511Z</td><td><a href="https://codegolf.stackexchange.com/questions/275590/play-the-final-fantasy-prelude/275600#275600">Luis Men</a></td></tr>
 <tr d-ix="8"><td>290</td><td>PowerShell</td><td>240918T153022Z</td><td><a href="https://codegolf.stackexchange.com/questions/275590/play-the-final-fantasy-prelude/275613#275613">bigyihsu</a></td></tr>
 <tr d-ix="9"><td>203</td><td>ZX Spectrum 48K Basic</td><td>240918T121524Z</td><td><a href="https://codegolf.stackexchange.com/questions/275590/play-the-final-fantasy-prelude/275609#275609">Neil</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.zsh.org/" rel="nofollow noreferrer">Zsh</a> +<a href="https://www.ffmpeg.org/ffplay.html" rel="nofollow noreferrer"><code>ffplay</code></a>, <sub><s>296</s></sub> <sub><s>241</s></sub> <sub><s>261</s></sub> 230 bytes x 2</h1>
+<div id="pu0" class="pu"><h1><a href="https://www.nicholson.com/rhn/basic/" rel="nofollow noreferrer">Chipmunk Basic</a>, <sub><s>677</s></sub> <sub><s>303</s></sub> <sub><s>280</s></sub> 241 bytes</h1>
+<pre class="lang-basic prettyprint-override"><code>dim m(20):d$=&quot;GIKN DFGK GIKN DFGK @BDG BDFI CGJN EILP&quot;
+for k=1to 8:for i=0to 4:for o=1to 4
+m(o+4*i)=555*2^(asc(mid$(field$(d$,k),o))/12+i-8):next:next
+for i=1to 17:s(m(i)):next:for i=1to 16:s(m(17-i)):next:next
+sub s(x):sound x,.2,50:return
+</code></pre>
+<p>The info about chords and octaves in the &quot;music theory&quot; section helped a lot. <br>
+Debug version (outdated):</p>
+<pre class="lang-basic prettyprint-override"><code>data 0,2,4,7,-3,-1,0,4,0,2,4,7,-3,-1,0,4,-7,-5,-3,0,-5,-3,-1,2,-4,0,3,7,-2,2,5,9
+dim a(4),m(16)
+
+for k=0to 7                       :' do 8 times
+  for i=1to 4:read a(i):next      :' read next 4 notes into array a
+  t(a)                            :' call the arpeggio subroutine, t
+next
+
+sub t(o)                          :' o is an octave (array of 4 notes, n)
+  for i=0to 3                     :' i goes up the octaves (steps of 12)
+  for j=1to 4                     :' j runs thru the notes in o
+    n=o(j)+12*i:print n;          :' n is the note number, incl factor
+    f=440*2^((n-21)/12)           :' f is frequency of n (Hz)
+    m(j+4*i)=f                    :' Add f to array m
+    s(f)                          :' Play f (Up)
+  next:next
+  for i=1to 15:s(m(16-i)):next    :' Play m (Down)
+  print
+return
+
+sub s(n)
+  sound n,.1,50
+return
+</code></pre>
+<p><sub><s><a href="https://github.com/roblogic/golf/blob/46d9ed8a30eaa2785bd216b5188800784a5be9eb/basic/275590-play-the-final-fantasy-prelude.bas" rel="nofollow noreferrer">677 bytes</a></s> <em>: I am sure there is a better way of coding this ...</em></sub></p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://www.zsh.org/" rel="nofollow noreferrer">Zsh</a> +<a href="https://www.ffmpeg.org/ffplay.html" rel="nofollow noreferrer"><code>ffplay</code></a>, <sub><s>296</s></sub> <sub><s>241</s></sub> <sub><s>261</s></sub> 230 bytes x 2</h1>
 <pre class="lang-bash prettyprint-override"><code>for z (GIKN DFGK GIKN DFGK @BDG BDFI CGJN EILP){W=
 for i ({0..4})for o (${(s::)z})W+=($[555*2**(##$o/12.+i-8)])
 for q (${W:0:18} ${(Oa)W:0:17})S+=between(t,$[p++]/5,$p/5)*$q+
@@ -55,7 +90,7 @@ Finally, we call <code>ffplay</code> using the string <code>S</code> (trailing <
 <p>The linked TIO example doesn't play sound (no <code>ffplay</code>), but you can see the humungous string <code>S</code>.</p>
 <p><sub><a href="https://tio.run/##TVDRasJAEHzPVyzxxNs7E3OhQUkJFGsNqcUKPvhgfbhKggfBxCRYNNy3x8QW7Muyw8zODHstD41MlSwhSfJUXoJ4f8iaJCvgCjSMFkuYzcMFPLaX6SyE6WwewWv4voS36GOF9SYwuhMFtHZs@0ljhzKgpKal7@NVY20A5IU6VgmQba9HMmssuHCZ2n2BabbkhgeUbD3PYy5jtFOMhGtzZU1wh4Y2ul73kEtnu/EdX0w0/lmafVu0E8jloTv900Fb5FPiHY01rnnwHVc/cXyk1ZBsc853I29I8pGHjJy4oZ9/nwFWAqk8JwpkfJZpWewDc@DYgpXqSF22iljF2pB1n2vEgdk0Nw" rel="nofollow noreferrer">Debug</a> <s><a href="https://tio.run/##NY89b4MwGIT3/AqLuoltwocdFwsCQ8ZOVGJgQEgx1FZIUCAhStUifjuBNp1Op3vf53Q/3WGUdSU7oHVby@9IlYdm1M0VVADtdVN/AouGYSj8QnFPFP/qMi4Y9/yNkOrNL/eAunhnRghm1HuBlSVyvJgpJ4B617bFgPt4SvtdAE@EB3zAII22z575YjPg2R0nR217ytNfGoyzY25SRqon8AImShq4gUUHAHsUS5xOrxHMOHcJIwQheLEYxQ5lNs6XyySCiVGo25dSZ3RbGzBrTTM3HLGGrSMwgdo0tsPibz6wNKjlXVdAqrusu2sZGSvXpqSrzoiRj3dyI1N/8moOGK@McXwA" rel="nofollow noreferrer" title="Zsh – Try It Online">296B</a></s> <s><a href="https://tio.run/##RY@9boMwFIX3PMVV6iq@dgDb4SdQ8QCdWomBIc1gkEmQUCABJSrIz05DO3Q7Z/i@ozP251k3te6hqrpGf6emPLdz1d5gBBrFhQE/jAr4T0L5ESg/jGEXaQNBXJ5wytPVgtRAJ@G6O4tLa4GSifZJgqPFnKeUHKJAMMUYpTJ8IVPrnTwprKP2XCpWoyeVi0f8VV0XOE9E4kgLT82HxtxilpLsqzDDw5gLHbbk0HF@9IIt6bwAGbnylX37@wFOBY2@VzVoc9dNfyvT9Ua4kvX1hSr2@c4G9lzIXrlF3Kzn@Qc" rel="nofollow noreferrer">241B</a></s> <s><a href="https://tio.run/##RY/PaoNAGMTveYqPdEv2203U3finpvoAPbWQgwcRXGVNBIkmSkqVfXZr0kNvM8xvYGbsz7NqatVDVXWN@ol1eW7nkmIURST1PIdJxigV/gsRO/nGhWREoi2khdmqam8wAg3CQoPrBwX8K0e6AUjXD2EfKA1eWJ5wSuJnpQY6OZa1N/hwLVAy0f5wwNFgwmOal0Cm1j7ZwjFA6hyfpeuCJfDIxlRk4OYLRD8VJgaPPC708K31hQ5bknacZ7a3JZ3tISNXvjLvf99gV0Gj7lUNSt9V09/KeL1xLMH6@kIl@/pgA1u2HF@5Qdys5/kX" rel="nofollow noreferrer">261B</a></s></sub></p>
 </div>
-<div id="pu1" class="pu"><h1>JavaScript, 324 bytes</h1>
+<div id="pu2" class="pu"><h1>JavaScript, 324 bytes</h1>
 <p>I used an array containing as many elements as there are notes to play, making sure that each element can be represented by a single hexadecimal character.</p>
 <p>This character represents a number of semitones of difference between this note and the previous note (except for the first element which is played as is)</p>
 <p>I then realized that some big chunks were repeated (those corresponding to the arpeggios in add2 and Maj7) and that I could factorize these portions of code</p>
@@ -70,7 +105,7 @@ _=&gt;{a=new AudioContext();with(a.createOscillator()){c=3;[...`6${b="889b889b88
 </div>
 </p>
 </div>
-<div id="pu2" class="pu"><h1>C (GCC) using OSS, <s>201</s> <s>197</s> <s>177</s> 174 bytes</h1>
+<div id="pu3" class="pu"><h1>C (GCC) using OSS, <s>201</s> <s>197</s> <s>177</s> 174 bytes</h1>
 <pre><code>i;main(c,n,a){for(open(&quot;/dev/dsp&quot;,1);write(3,&amp;n,1);n=(a+=901*exp2(n/4+(&quot;047;02470237&quot;[n%4+(5732&gt;&gt;c*2&amp;12)]-&quot;,/,/310.&quot;[c])/12.))&gt;&gt;9)n=i++/1500,c=n/32%8,n%=32,n=n&gt;16?32-n:n;}
 </code></pre>
 <p>The score includes 3 bytes for the <code>-lm</code> compiler flag. It runs on any UNIX system with support for the Open Sound System (OSS), or any other sound system that provides compatibility with OSS. On modern Linux, you might have to <code>sudo modprobe snd_pcm_oss</code> if this is not done automatically already. If you compile with GCC 14 or later, you might need to pass the <code>-std=gnu89</code> flag, but earlier versions don't need it.</p>
@@ -90,7 +125,7 @@ _=&gt;{a=new AudioContext();with(a.createOscillator()){c=3;[...`6${b="889b889b88
 <p>It then calculates the change in phase per sample for the waveform at that frequency in fixed point format, and adds it to the phase accumulator  <code>a</code>. This is then converted to a byte to be send straight to the audio device, thus generating a sawtooth wave with the right frequency.</p>
 <p>This version loops (for at least six days).</p>
 </div>
-<div id="pu3" class="pu"><h1>JavaScript, 320 bytes</h1>
+<div id="pu4" class="pu"><h1>JavaScript, 320 bytes</h1>
 <p>I don't golf with JavaScript much so I'm sure there's a lot of opportunities for golfing here. Should work on most browsers.</p>
 <pre class="lang-js prettyprint-override"><code>x=&gt;{a=new AudioContext
 with(a.createOscillator()){[y=[0,2,4,7],z=[-3,-1,0,4],y,z,[-7,-5,-3,0],[-5,-3,-1,2],[-4,0,3,7],[-2,2,5,9]].map((c,t)=&gt;{p=s=&gt;frequency.setValueAtTime(440*2**(s-1.75),(t*32+i)*.19)
@@ -116,7 +151,7 @@ stop(48.64)}}</code></pre>
 </div>
 </p>
 </div>
-<div id="pu4" class="pu"><h1><a href="https://en.wikipedia.org/wiki/General_Instrument_CP1600" rel="nofollow noreferrer">CP-1610</a> machine code, 125 DECLEs<sup>1</sup>=156.25 bytes</h1>
+<div id="pu5" class="pu"><h1><a href="https://en.wikipedia.org/wiki/General_Instrument_CP1600" rel="nofollow noreferrer">CP-1610</a> machine code, 125 DECLEs<sup>1</sup>=156.25 bytes</h1>
 <p><em><sup>1. CP-1610 instructions are encoded with 10-bit values (0x000 to 0x3FF), known as DECLEs. Although the Intellivision is also able to work on 16-bit data, programs were really stored in 10-bit ROM back then.</sup></em></p>
 <p>A fantasy console?!? Let's do it on a real one!</p>
 <p>This code is meant to be run on a PAL Intellivision (50Hz). It would also work on an NTSC system (60Hz), but at a different pitch and speed.</p>
@@ -264,7 +299,7 @@ stop(48.64)}}</code></pre>
 </ul>
 <p>The actual delta values are obtained by subtracting 5 to the stored values.</p>
 </div>
-<div id="pu5" class="pu"><h1>Javascript, 270 bytes</h1>
+<div id="pu6" class="pu"><h1>Javascript, 270 bytes</h1>
 <pre><code>x=&gt;{a=new AudioContext
 with(a.createOscillator()){
 for(i=0;i&lt;256;i++){n=[60,49,60,49,32,40,46,54][i&gt;&gt;5]
@@ -333,41 +368,6 @@ stop(48)}}</code></pre>
 </div>
 </div>
 </p>
-</div>
-<div id="pu6" class="pu"><h1><a href="https://www.nicholson.com/rhn/basic/" rel="nofollow noreferrer">Chipmunk Basic</a>, <sub><s>677</s></sub> <sub><s>303</s></sub> 280 bytes</h1>
-<pre class="lang-basic prettyprint-override"><code>data 0,2,4,7,-3,-1,0,4,0,2,4,7,-3,-1,0,4,-7,-5,-3,0,-5,-3,-1,2,-4,0,3,7,-2,2,5,9
-dim a(4),m(16):for k=0to 7:for i=1to 4:read a(i):next
-for i=0to 3:for j=1to 4:f=440*2^(((a(j)+12*i)-21)/12):m(j+4*i)=f:s(f):next:next
-for i=1to 15:s(m(16-i)):next:next
-sub s(n):sound n,.15,50:return
-</code></pre>
-<p>The info about chords and octaves in the &quot;music theory&quot; section helped a lot. <br>
-More readable, debug version:</p>
-<pre class="lang-basic prettyprint-override"><code>data 0,2,4,7,-3,-1,0,4,0,2,4,7,-3,-1,0,4,-7,-5,-3,0,-5,-3,-1,2,-4,0,3,7,-2,2,5,9
-dim a(4),m(16)
-
-for k=0to 7                       :' do 8 times
-  for i=1to 4:read a(i):next      :' read next 4 notes into array a
-  t(a)                            :' call the arpeggio subroutine, t
-next
-
-sub t(o)                          :' o is an octave (array of 4 notes, n)
-  for i=0to 3                     :' i goes up the octaves (steps of 12)
-  for j=1to 4                     :' j runs thru the notes in o
-    n=o(j)+12*i:print n;          :' n is the note number, incl factor
-    f=440*2^((n-21)/12)           :' f is frequency of n (Hz)
-    m(j+4*i)=f                    :' Add f to array m
-    s(f)                          :' Play f (Up)
-  next:next
-  for i=1to 15:s(m(16-i)):next    :' Play m (Down)
-  print
-return
-
-sub s(n)
-  sound n,.1,50
-return
-</code></pre>
-<p><sub><s><a href="https://github.com/roblogic/golf/blob/46d9ed8a30eaa2785bd216b5188800784a5be9eb/basic/275590-play-the-final-fantasy-prelude.bas" rel="nofollow noreferrer">677 bytes</a></s> <em>: I am sure there is a better way of coding this ...</em></sub></p>
 </div>
 <div id="pu7" class="pu"><h1><a href="https://github.com/lmendo/MATL" rel="nofollow noreferrer">MATL</a> (1 language), <s>78</s> 77 bytes</h1>
 <pre><code>0'!4XC@nRAxt~&amp;'F5:ZaKeK1X&quot;tP[AaABOlHN]0Y(_&amp;vhYs&quot;1875:YPE*76/@12/W*Y,E]&amp;h1e4Y#
