--- a/q/275739.html
+++ b/q/275739.html
@@ -26,15 +26,35 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>064</td><td>JavaScript Node.js</td><td>240924T080613Z</td><td><a href="https://codegolf.stackexchange.com/questions/275739/print-4-billion-if-statements/275740#275740">l4m2</a></td></tr>
+<tr d-ix="0"><td>061</td><td>JavaScript Node.js</td><td>240924T080613Z</td><td><a href="https://codegolf.stackexchange.com/questions/275739/print-4-billion-if-statements/275740#275740">l4m2</a></td></tr>
+<tr d-ix="1"><td>045</td><td>Brachylog</td><td>240924T081621Z</td><td><a href="https://codegolf.stackexchange.com/questions/275739/print-4-billion-if-statements/275742#275742">Fatalize</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 64 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 61 bytes</h1>
 
 <pre class="lang-javascript prettyprint-override"><code>_=&gt;a+_
-for(a='x=&gt;',i=0;i&lt;2**32;)a+=`x==${i++}?x%2?&quot;odd&quot;:&quot;even&quot;:`
+for(a='x=&gt;',i=0;a+=`x==${i}?x%2?&quot;odd&quot;:&quot;even&quot;:`,~i++;);
 </code></pre>
-<p><a href="https://tio.run/##BcHRCkAwFADQd5@xyGYIj7h8CjfbNGlXSCv59jlnwwev5bTHXThSOhgIEwwop8jQyRFSD0OaW6g62zdZVledQAmzB4hfK@U3@qQZGSnFWqYf7Vg7h4XcRbsud1q54UKEHw" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
-<p>.</p>
+<p><a href="https://tio.run/##BcFBCoQgFADQfceQIs2ahRMtkl9HqU/qYIQ/KkKImas7761447kcfr@aQMYmB2mCAeWUOTo4QhlhKGsPqqrequlajRLmCJA//jvGQo2MjGE9s7cNrJ/rn5dSC50WCidt9rXRhzsuRPoD" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
+<p>tsh suggests bitwise operator, so tio is such.</p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://github.com/JCumin/Brachylog" rel="nofollow noreferrer">Brachylog</a>, 45 bytes</h1>
+<pre><code>2^₁₆&gt;ℕ×₂gj+₁ᵗ;[&quot;∧\&quot;even\&quot;|&quot;,&quot;∧\&quot;odd\&quot;|&quot;]zwᵐ²⊥
+</code></pre>
+<p><a href="https://tio.run/##SypKTM6ozMlPN/r/3yjuUVPjo6Y2u0ctUw9Pf9TUlJ6lDRR5uHW6dbTSo47lMUqpZal5MUo1SjoQbn5KCogXW1X@cOuEQ5sedS39//8/AA" rel="nofollow noreferrer" title="Brachylog – Try It Online">Try it online!</a></p>
+<h3>Explanation</h3>
+<pre><code>2^₁₆&gt;ℕ                                           Take a number I between 0 and 2^16
+       ×₂                                         J = I × 2
+         gj+₁ᵗ                                    [J, J + 1]
+              ;[&quot;∧\&quot;even\&quot;|&quot;,&quot;∧\&quot;odd\&quot;|&quot;]z       Zip J with &quot;∧\&quot;even\&quot;|&quot; and J+1 with &quot;∧\&quot;odd\&quot;|&quot;
+                                           wᵐ²    Write everything 
+                                              ⊥   False: this will force to retry write with different values of J
+</code></pre>
+<p>The resulting program is very simple:</p>
+<pre><code>0∧&quot;even&quot;           Input = 0 and Output = &quot;even&quot;
+        |           Or
+         1∧&quot;odd&quot;   Input = 1 and Output = &quot;odd&quot;
+                |   Or…
+</code></pre>
 </div>
 
 <table id="st">
