--- a/q/275739.html
+++ b/q/275739.html
@@ -26,17 +26,26 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>057</td><td>JavaScript Node.js</td><td>240924T080613Z</td><td><a href="https://codegolf.stackexchange.com/questions/275739/print-4-billion-if-statements/275740#275740">l4m2</a></td></tr>
-<tr d-ix="1"><td>045</td><td>Brachylog</td><td>240924T081621Z</td><td><a href="https://codegolf.stackexchange.com/questions/275739/print-4-billion-if-statements/275742#275742">Fatalize</a></td></tr>
+<tr d-ix="0"><td>038</td><td>Brachylog</td><td>240924T081621Z</td><td><a href="https://codegolf.stackexchange.com/questions/275739/print-4-billion-if-statements/275742#275742">Fatalize</a></td></tr>
+<tr d-ix="1"><td>057</td><td>JavaScript Node.js</td><td>240924T080613Z</td><td><a href="https://codegolf.stackexchange.com/questions/275739/print-4-billion-if-statements/275740#275740">l4m2</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 57 bytes</h1>
-
-<pre class="lang-javascript prettyprint-override"><code>for(a='x=&gt;',i=0;a+=i+'==x?x%2?&quot;odd&quot;:&quot;even&quot;:',~i++;)_=&gt;a+_
+<div id="pu0" class="pu"><h1><a href="https://github.com/JCumin/Brachylog" rel="nofollow noreferrer">Brachylog</a>, 38 bytes (very inefficient)</h1>
+<pre><code>2^₃₂-₁⟦;[&quot;∧\&quot;even\&quot;|&quot;,&quot;∧\&quot;odd\&quot;|&quot;]zwᵐ²
 </code></pre>
-<p><a href="https://tio.run/##BcFLCsMgEADQfY8hFDXmR1q6SJjkKMmgk2IRJ5giWfXq9r0PZjxt8se3ieyo7EAZg9rKzkkhyAtmWXvoJzTgjQS4lus@LIKdE6OgTFGMsv55Yya9woxmLVub6AhoSXV9V8uhqh5D83pKraeb5XhyoDbwW@1K6/IH" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
-<p>tsh suggests bitwise operator.</p>
-</div>
-<div id="pu1" class="pu"><h1><a href="https://github.com/JCumin/Brachylog" rel="nofollow noreferrer">Brachylog</a>, 45 bytes</h1>
+<p><a href="https://tio.run/##SypKTM6ozMlPN/r/3yjuUVPzo6Ym3UdNjY/mL7OOVnrUsTxGKbUsNS9GqUZJB8LNT0kB8WKryh9unXBo0////wE" rel="nofollow noreferrer" title="Brachylog – Try It Online">Try it online!</a></p>
+<p><a href="https://tio.run/##SypKTM6ozMlPN/r/3yjuUVOL7qOmxkfzl1lHKz3qWB6jlFqWmhejVKOkA@Hmp6SAeLFV5Q@3Tji06f///wA" rel="nofollow noreferrer">Try it with 2^4 instead to see it working</a></p>
+<h3>Explanation</h3>
+<pre><code>2^₃₂-₁⟦                                  Take the list [0, 1, …, 2^32 - 1]
+     ;[&quot;∧\&quot;even\&quot;|&quot;,&quot;∧\&quot;odd\&quot;|&quot;]z     Circular zip with [&quot;∧\&quot;even\&quot;|&quot;,&quot;∧\&quot;odd\&quot;|&quot;]
+                                  wᵐ²  Write everything
+</code></pre>
+<p>The resulting program is very simple:</p>
+<pre><code>0∧&quot;even&quot;           Input = 0 and Output = &quot;even&quot;
+        |           Or
+         1∧&quot;odd&quot;   Input = 1 and Output = &quot;odd&quot;
+                |   Or…
+</code></pre>
+<h1><a href="https://github.com/JCumin/Brachylog" rel="nofollow noreferrer">Brachylog</a>, 45 bytes (way more efficient)</h1>
 <pre><code>2^₁₆&gt;ℕ×₂gj+₁ᵗ;[&quot;∧\&quot;even\&quot;|&quot;,&quot;∧\&quot;odd\&quot;|&quot;]zwᵐ²⊥
 </code></pre>
 <p><a href="https://tio.run/##SypKTM6ozMlPN/r/3yjuUVPjo6Y2u0ctUw9Pf9TUlJ6lDRR5uHW6dbTSo47lMUqpZal5MUo1SjoQbn5KCogXW1X@cOuEQ5sedS39//8/AA" rel="nofollow noreferrer" title="Brachylog – Try It Online">Try it online!</a></p>
@@ -48,12 +57,13 @@
                                            wᵐ²    Write everything 
                                               ⊥   False: this will force to retry write with different values of J
 </code></pre>
-<p>The resulting program is very simple:</p>
-<pre><code>0∧&quot;even&quot;           Input = 0 and Output = &quot;even&quot;
-        |           Or
-         1∧&quot;odd&quot;   Input = 1 and Output = &quot;odd&quot;
-                |   Or…
+</div>
+<div id="pu1" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 57 bytes</h1>
+
+<pre class="lang-javascript prettyprint-override"><code>for(a='x=&gt;',i=0;a+=i+'==x?x%2?&quot;odd&quot;:&quot;even&quot;:',~i++;)_=&gt;a+_
 </code></pre>
+<p><a href="https://tio.run/##BcFLCsMgEADQfY8hFDXmR1q6SJjkKMmgk2IRJ5giWfXq9r0PZjxt8se3ieyo7EAZg9rKzkkhyAtmWXvoJzTgjQS4lus@LIKdE6OgTFGMsv55Yya9woxmLVub6AhoSXV9V8uhqh5D83pKraeb5XhyoDbwW@1K6/IH" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
+<p>tsh suggests bitwise operator.</p>
 </div>
 
 <table id="st">
