--- a/q/275739.html
+++ b/q/275739.html
@@ -26,12 +26,54 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>163</td><td>Bash</td><td>240924T090427Z</td><td><a href="https://codegolf.stackexchange.com/questions/275739/print-4-billion-if-statements/275744#275744">Themooni</a></td></tr>
-<tr d-ix="1"><td>069</td><td>Python 3</td><td>240924T084616Z</td><td><a href="https://codegolf.stackexchange.com/questions/275739/print-4-billion-if-statements/275743#275743">xnor</a></td></tr>
-<tr d-ix="2"><td>038</td><td>Brachylog</td><td>240924T081621Z</td><td><a href="https://codegolf.stackexchange.com/questions/275739/print-4-billion-if-statements/275742#275742">Fatalize</a></td></tr>
-<tr d-ix="3"><td>057</td><td>JavaScript Node.js</td><td>240924T080613Z</td><td><a href="https://codegolf.stackexchange.com/questions/275739/print-4-billion-if-statements/275740#275740">l4m2</a></td></tr>
+<tr d-ix="0"><td>028</td><td>05AB1E</td><td>240924T093200Z</td><td><a href="https://codegolf.stackexchange.com/questions/275739/print-4-billion-if-statements/275745#275745">Kevin Cr</a></td></tr>
+<tr d-ix="1"><td>163</td><td>Bash</td><td>240924T090427Z</td><td><a href="https://codegolf.stackexchange.com/questions/275739/print-4-billion-if-statements/275744#275744">Themooni</a></td></tr>
+<tr d-ix="2"><td>069</td><td>Python 3</td><td>240924T084616Z</td><td><a href="https://codegolf.stackexchange.com/questions/275739/print-4-billion-if-statements/275743#275743">xnor</a></td></tr>
+<tr d-ix="3"><td>038</td><td>Brachylog</td><td>240924T081621Z</td><td><a href="https://codegolf.stackexchange.com/questions/275739/print-4-billion-if-statements/275742#275742">Fatalize</a></td></tr>
+<tr d-ix="4"><td>057</td><td>JavaScript Node.js</td><td>240924T080613Z</td><td><a href="https://codegolf.stackexchange.com/questions/275739/print-4-billion-if-statements/275740#275740">l4m2</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.gnu.org/software/bash/" rel="nofollow noreferrer">Bash</a>, 163 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E</a>, 28 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
+<pre><code>žJ'&lt;×η&quot;Ìi“0“ë&quot;«J0„ƒÎ¿»#žJ∍.;
+</code></pre>
+<p><a href="https://tio.run/##yy9OTMpM/f/fyEzd5vD0c9uVDvdkPmqYYwDEh1crHVrtBWTNOzbpcN@h/Yd2KxuZPero1bP@/x8A" rel="nofollow noreferrer">Try it online with max <code>25</code> instead of <code>4294967295</code></a>.<br />
+<a href="https://tio.run/##yy9OTMpM/f/f5nBP5qOGOallqXlA6vBqG6hAfkoKlI@pAosarKqwqsOhEodanKpxqsejA48evLrw6iOgk4BegroJ6ifCBCLMIMoUoswh0iQizSLaNHTzuP7/NzIFAA" rel="nofollow noreferrer">Try the outputted program.</a></p>
+<p><strong>Explanation:</strong></p>
+
+<pre class="lang-python prettyprint-override"><code>žJ                 # Push constant 4294967296
+  '&lt;×             '# Pop and push a string of that many &quot;&lt;&quot;
+     η             # Take the prefixes of this list: [&quot;&lt;&quot;,&quot;&lt;&lt;&quot;,&quot;&lt;&lt;&lt;&quot;,...]
+      &quot;Ìi“0“ë&quot;«    # Append string &quot;Ìi“0“ë&quot; to each
+               J   # Join this entire string together
+0                  # Push a 0
+ „ƒÎ¿»             # Push dictionary string &quot;even odd&quot;
+      #            # Split it on spaces: [&quot;even&quot;,&quot;odd&quot;]
+       žJ∍         # Extend this list to size 4294967296: 
+                   #  [&quot;even&quot;,&quot;odd&quot;,&quot;even&quot;,&quot;odd&quot;,&quot;even&quot;,...]
+          .;       # Replace every first 0 with the alternating &quot;even&quot;/&quot;odd&quot;
+</code></pre>
+<p><a href="https://codegolf.stackexchange.com/a/166851/52210">See this 05AB1E tip of mine (section <em>How to use the dictionary?</em>)</a> to understand why <code>„ƒÎ¿»</code> is <code>&quot;even odd&quot;</code>.</p>
+<p>Explanation of the resulting program:</p>
+<p>(Note: only <code>1</code> is truthy in 05AB1E.)</p>
+<pre class="lang-python prettyprint-override"><code>&lt;                  # Decrease the (implicit) input-integer by 1
+ Ì                 # Then increase it by 2
+  i                # If this now equals 1 (aka if the input=0):
+   “even“          #  Push &quot;even&quot;
+  ë                # Else:
+   &lt;&lt;              #  Decrease the (implicit) input-integer by 2
+     Ì             #  Then increase it by 2
+      i            #  If this now equals 1 (aka if the input=1):
+       “odd“       #   Push &quot;odd&quot;
+      ë            #  Else:
+       &lt;&lt;&lt;         #   Decrease the (implicit) input-integer by 3
+          Ì        #   Then increase it by 2
+           i       #   If this now equals 1 (aka if the input=2):
+            “even“ #    Push &quot;even&quot;
+           ë       #   Else:
+            ...    #    etc.
+                   # (then output the top of the stack implicitly as result)
+</code></pre>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://www.gnu.org/software/bash/" rel="nofollow noreferrer">Bash</a>, 163 bytes</h1>
 <pre class="lang-bash prettyprint-override"><code>c=echo
 $c case \$1 in
 o=`$c {1..4294967295..2}&quot;)$c odd;;
@@ -54,13 +96,13 @@ $c esac
 <p>Bash brace expansions (which is what {x..y..step} is) are applied to their surrounding string, so <code>a{b,c}</code> returns <code>ab ac</code>. we build an array of all odds and another of all evens, then we zip them by pasting one from each array, converting tabs to newlines, and repeating until both arrays are exhausted.</p>
 <p><a href="https://ato.pxeger.com/run?1=m70kKbE4Y8GCpaUlaboWNxcn26YmZ-RzqSQrJCcWpyrEqBgqZOZx5dsmAEWqDfX0TIwsTSzNzI0sTfX0jGqVNIHC-Skp1tZcSglcqRBVRkiqTOCqUstS8yDKChKLS1IVbDSAgkoq1fnRWrFAFXB-KoRfU5yaoqBerB9TElOipR-Tp5-uDnJUanFiMsSpUBfDXA4A" rel="nofollow noreferrer">Attempt This Online!</a></p>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://docs.python.org/3.8/" rel="nofollow noreferrer">Python 3</a>, 69 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://docs.python.org/3.8/" rel="nofollow noreferrer">Python 3</a>, 69 bytes</h1>
 
 <pre class="lang-python prettyprint-override"><code>print(&quot;def f(n):f&quot;,*range(2**33),sep=&quot;==n==print('eovdedn'[n&amp;1::2]);&quot;)
 </code></pre>
 <p><a href="https://tio.run/##fdCxDsIgFIXhnacgDJZLOliw1WB4EuNgwkW7XAg2Jj49NmFwu/N3zvKX7/bK5C6ltlbqSptWEZNMmsAnNZr6oCdqa4yD8Y0lqBAohL4cMH8iRhpudJi8t3e4Kmj/Oz898jzxbHl2PJ94nnleeD4LITqCSLlKkivJ3nHeq@xp2g8" rel="nofollow noreferrer" title="Python 3.8 (pre-release) – Try It Online">Try it online (with <code>2**3</code> in place of <code>2**33</code>)</a></p>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://github.com/JCumin/Brachylog" rel="nofollow noreferrer">Brachylog</a>, 38 bytes (very inefficient)</h1>
+<div id="pu3" class="pu"><h1><a href="https://github.com/JCumin/Brachylog" rel="nofollow noreferrer">Brachylog</a>, 38 bytes (very inefficient)</h1>
 <pre><code>2^₃₂-₁⟦;[&quot;∧\&quot;even\&quot;|&quot;,&quot;∧\&quot;odd\&quot;|&quot;]zwᵐ²
 </code></pre>
 <p><a href="https://tio.run/##SypKTM6ozMlPN/r/3yjuUVPzo6Ym3UdNjY/mL7OOVnrUsTxGKbUsNS9GqUZJB8LNT0kB8WKryh9unXBo0////wE" rel="nofollow noreferrer" title="Brachylog – Try It Online">Try it online!</a></p>
@@ -89,7 +131,7 @@ $c esac
                                               ⊥   False: this will force to retry write with different values of J
 </code></pre>
 </div>
-<div id="pu3" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 57 bytes</h1>
+<div id="pu4" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 57 bytes</h1>
 
 <pre class="lang-javascript prettyprint-override"><code>for(a='x=&gt;',i=0;a+=i+'==x?x%2?&quot;odd&quot;:&quot;even&quot;:',~i++;)_=&gt;a+_
 </code></pre>
